--- a/ProjectManager.Test/packages.config
+++ b/ProjectManager.Test/packages.config
@@ -11,7 +11,15 @@
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="NUnit" version="3.11.0" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.11.1" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.11.1" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.8.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.7" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net452" developmentDependency="true" />
+  <package id="NUnitTestAdapter" version="2.3.0" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
