--- a/ProjectManager.Test/ProjectManager.Test.csproj
+++ b/ProjectManager.Test/ProjectManager.Test.csproj
@@ -104,6 +104,12 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\projectManager\ProjectManager.csproj">
+      <Project>{cc922696-ee09-4213-ad6f-cf56b221a9bd}</Project>
+      <Name>ProjectManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
