--- a/projectManager/projectManager.csproj
+++ b/projectManager/projectManager.csproj
@@ -168,7 +168,7 @@
     <Content Include="DAC\ProjectManager.edmx.diagram">
       <DependentUpon>ProjectManager.edmx</DependentUpon>
     </Content>
-    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\IISDeploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
